--- a/templates/index.html
+++ b/templates/index.html
@@ -4,41 +4,39 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Book Search</title>
-    <style>
-        /* Add styles later */
-    </style>
+    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
 <body>
-    <h1>Book Search</h1>
-    <form action="/books" method="get">
-        <div>
-            <label for="genre">Genre:</label>
-            <input type="text" id="genre" name="genre">
-        </div>
-        <div>
-            <label for="author">Author:</label>
-            <input type="text" id="author" name="author">
-        </div>
-        <div>
-            <label for="id">Book ID:</label>
-            <input type="text" id="id" name="id">
-        </div>
-        <div>
-            <label for="publication_year">Publication Year:</label>
-            <input type="text" id="publication_year" name="publication_year">
-        </div>
-        <div>
-            <label for="title">Title:</label>
-            <input type="text" id="title" name="title">
-        </div>
-        <button type="submit">Search</button>
-    </form>
-
-    <div id="results">
+<h1>Book Search</h1>
+<form action="/books" method="get">
+    <div>
+        <label for="genre">Genre:</label>
+        <input type="text" id="genre" name="genre">
     </div>
+    <div>
+        <label for="author">Author:</label>
+        <input type="text" id="author" name="author">
+    </div>
+    <div>
+        <label for="id">Book ID:</label>
+        <input type="text" id="id" name="id">
+    </div>
+    <div>
+        <label for="publication_year">Publication Year:</label>
+        <input type="text" id="publication_year" name="publication_year">
+    </div>
+    <div>
+        <label for="title">Title:</label>
+        <input type="text" id="title" name="title">
+    </div>
+    <button type="submit">Search</button>
+</form>
 
-    <script>
-    </script>
+<div id="results">
+</div>
+
+<script>
+</script>
 </body>
 </html>
 
