Build: HTML template and request to api

--- a/templates/index.html
+++ b/templates/index.html
@@ -18,12 +18,12 @@
         <input type="text" id="author" name="author">
     </div>
     <div>
-        <label for="id">Book ID:</label>
-        <input type="text" id="id" name="id">
+        <label for="min_year">Publication Year (From):</label>
+        <input type="text" id="min_year" name="min_year">
     </div>
     <div>
-        <label for="publication_year">Publication Year:</label>
-        <input type="text" id="publication_year" name="publication_year">
+        <label for="max_year">Publication Year (To):</label>
+        <input type="text" id="max_year" name="max_year">
     </div>
     <div>
         <label for="title">Title:</label>
